--- a/Aktuelles/index.html
+++ b/Aktuelles/index.html
@@ -3,32 +3,31 @@ layout: default
 title: Aktuelles
 ---
 
-<!-- This loops through the paginated posts -->
+<div class="row row-cols-1 row-cols-md-2 g-4">
 {% for post in paginator.posts %}
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p class="author">
-    <span class="date">{{ post.date }}</span>
-  </p>
-  <div class="content">
-    {{ post.content }}
+  <div class="col">
+    <div class="card h-100 clickable">
+      <div class="card-header bg-yellow"><a href="{{ post.url }}">{{ post.title }}</a></div>
+      <div class="card-body">{{ post.excerpt }}  
+      <div class="card-footer">{{ post.date | date: "%d.%m.%Y" }}</div>
+    </div>
   </div>
 {% endfor %}
-
-<!-- Pagination links -->
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">
-      Previous
-    </a>
-  {% else %}
-    <span class="previous">Previous</span>
-  {% endif %}
-  <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-  {% else %}
-    <span class="next ">Next</span>
-  {% endif %}
 </div>
+
+<hr/>
+<ul class="pagination">
+  {% if paginator.previous_page %}
+    <li class="page-item">
+      <a href="{{ paginator.previous_page_path }}">&laquo;</a>
+    </li>
+  {% endif %}
+  <li class="page-item">
+    {{ paginator.page }} / {{ paginator.total_pages }}
+  </li>
+  {% if paginator.next_page %}
+    <li class="page-item">
+      <a href="{{ paginator.next_page_path }}">&raquo;</a>
+    </li>
+  {% endif %}
+</ul>
