--- a/Aktuelles/index.html
+++ b/Aktuelles/index.html
@@ -7,8 +7,8 @@ title: Aktuelles
 {% for post in paginator.posts %}
   <div class="col">
     <div class="card h-100 clickable">
-      <div class="card-header bg-yellow"><a href="{{ post.url }}">{{ post.title }}</a></div>
-      <div class="card-body">{{ post.excerpt }}  
+      <div class="card-header bg-yellow"><a class="link-dark" href="{{ post.url }}">{{ post.title }}</a></div>
+      <div class="card-body">{{ post.excerpt }}</div>
       <div class="card-footer">{{ post.date | date: "%d.%m.%Y" }}</div>
     </div>
   </div>
@@ -16,18 +16,26 @@ title: Aktuelles
 </div>
 
 <hr/>
-<ul class="pagination">
+<ul class="pagination justify-content-center">
   {% if paginator.previous_page %}
     <li class="page-item">
-      <a href="{{ paginator.previous_page_path }}">&laquo;</a>
+      <a class="page-link" href="{{ paginator.previous_page_path }}">&laquo;</a>
+    </li>
+  {% else %}
+    <li class="page-item disabled">
+      <a class="page-link">&laquo;</a>
     </li>
   {% endif %}
-  <li class="page-item">
-    {{ paginator.page }} / {{ paginator.total_pages }}
+  <li class="page-item active">
+    <a class="page-link" href="#">{{ paginator.page }} / {{ paginator.total_pages }}</a>
   </li>
   {% if paginator.next_page %}
     <li class="page-item">
-      <a href="{{ paginator.next_page_path }}">&raquo;</a>
+      <a class="page-link" href="{{ paginator.next_page_path }}">&raquo;</a>
+    </li>
+  {% else %}
+    <li class="page-item disabled">
+      <a class="page-link">&raquo;</a>
     </li>
   {% endif %}
 </ul>
