--- a/Aktuelles/index.html
+++ b/Aktuelles/index.html
@@ -44,7 +44,7 @@ title: Aktuelles
   {% endif %}
 </ul>
 </div>
-<div class="col">
+<div class="col text-end">
   <button class="btn btn-secondary"><span class="mi me-1">rss_feed</span>RSS Feed</button>
 </div>
 </div>
