--- a/Aktuelles/index.html
+++ b/Aktuelles/index.html
@@ -45,6 +45,6 @@ title: Aktuelles
 </ul>
 </div>
 <div class="col text-end">
-  <button class="btn btn-secondary"><span class="mi me-1">rss_feed</span>RSS Feed</button>
+  <a class="btn btn-secondary" href="{{ site.baseurl }}/feed.xml"><span class="mi me-1">rss_feed</span>RSS Feed</a>
 </div>
 </div>
