Sitemap und Navigationselemente hinzugefügt #28

--- a/Aktuelles/index.html
+++ b/Aktuelles/index.html
@@ -50,6 +50,6 @@ title: Aktuelles
 </ul>
 </div>
 <div class="col text-end">
-  <a class="btn btn-secondary" href="{{ site.baseurl }}/feed.xml"><span class="mi me-1">rss_feed</span>RSS Feed</a>
+  <a class="btn btn-secondary" href="{{ site.baseurl }}/feed.xml"><span class="mi me-1">&#xF522;</span>RSS Feed</a>
 </div>
 </div>
