--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -761,6 +761,13 @@
 <li id="sitemap-_Ideenhalde_Weltraumphaenomene"><a href="/Ideenhalde/Weltraumphaenomene" data-sort="/Ideenhalde/Weltraumphaenomene">Weltraumphänomene</a></li>
 </ul>
 </li>
+<li id="sitemap-_Publikationen_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Publikationen/" data-sort="/111/Publikationen/">Publikationen</a>
+<ul></ul>
+</li>
+<li id="sitemap-_StarTunes_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/StarTunes/" data-sort="/111/StarTunes/">StarTunes</a>
+<ul><li id="sitemap-_StarTunes_Lyrics"><a href="/StarTunes/Lyrics" data-sort="/StarTunes/Lyrics">StarTunes Lyrics</a></li>
+</ul>
+</li>
 <li id="sitemap-_Freies_Rollenspiel"><a href="/Freies_Rollenspiel" data-sort="/Freies_Rollenspiel">Freies Rollenspiel</a></li>
 <li id="sitemap-_Kontakt"><a href="/Kontakt" data-sort="/Kontakt">Kontakt</a></li>
 <li id="sitemap-_Rezensionen"><a href="/Rezensionen" data-sort="/Rezensionen">Rezensionen, Vorstellungen und Spielberichte</a></li>
