--- a/404.html
+++ b/404.html
@@ -1,10 +1,8 @@
 ---
-layout: default
+layout: page
 title: Seite nicht gefunden
 permalink: /404.html
 ---
-
-<h1>Seite nicht gefunden</h1>
 
 <p>Die aufgerufene Seite wurde nicht gefunden.</p>
 <ul>
