--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -681,7 +681,7 @@
 </li>
 <li id="sitemap-_Abenteuer_Wagonian_Wedding_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Wagonian_Wedding/">Wagonian Wedding</a>
 <ul><li id="sitemap-_Abenteuer_Wagonian_Wedding_Der_Spion_der_aus_dem_Weltall_kam"><a href="/Abenteuer/Wagonian_Wedding/Der_Spion_der_aus_dem_Weltall_kam">Auftritt: Der Spion, der aus dem Weltall kam</a></li>
-<li id="sitemap-_Abenteuer_Wagonian_Wedding_Der_Teufel_traegt_Baeaemler"><a href="/Abenteuer/Wagonian_Wedding/Der_Teufel_traegt_Baeaemler">Auftritt: Der Teufel trägt Bäämler</a></li>
+<li id="sitemap-_Abenteuer_Wagonian_Wedding_Der_Teufel_traegt_Baeaemmler"><a href="/Abenteuer/Wagonian_Wedding/Der_Teufel_traegt_Baeaemmler">Auftritt: Der Teufel trägt Bäämmler</a></li>
 <li id="sitemap-_Abenteuer_Wagonian_Wedding_Die_ueblichen_Verdaechtigen"><a href="/Abenteuer/Wagonian_Wedding/Die_ueblichen_Verdaechtigen">Auftritt: Die üblichen Verdächtigen</a></li>
 <li id="sitemap-_Abenteuer_Wagonian_Wedding_Ein_Herz_und_ein_Wagone"><a href="/Abenteuer/Wagonian_Wedding/Ein_Herz_und_ein_Wagone">Auftritt: Ein Herz und ein Wagone</a></li>
 <li id="sitemap-_Abenteuer_Wagonian_Wedding_Einleitung"><a href="/Abenteuer/Wagonian_Wedding/Einleitung">Einleitung: Hein the Mono</a></li>
