Foo-Bar und C3H6O2 hinzugefügt

--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -299,7 +299,8 @@
 </ul>
 </li>
 <li id="sitemap-_Weltraum_Piraten_Treffpunkte_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Weltraum/Piraten/Treffpunkte/">Piratentreffpunkte</a>
-<ul><li id="sitemap-_Weltraum_Piraten_Treffpunkte_Freeport"><a href="/Weltraum/Piraten/Treffpunkte/Freeport">Freeport</a></li>
+<ul><li id="sitemap-_Weltraum_Piraten_Treffpunkte_Foo_Bar"><a href="/Weltraum/Piraten/Treffpunkte/Foo-Bar">Foo-Bar</a></li>
+<li id="sitemap-_Weltraum_Piraten_Treffpunkte_Freeport"><a href="/Weltraum/Piraten/Treffpunkte/Freeport">Freeport</a></li>
 <li id="sitemap-_Weltraum_Piraten_Treffpunkte_Gimis_Bar"><a href="/Weltraum/Piraten/Treffpunkte/Gimis_Bar">Gimis Bar</a></li>
 <li id="sitemap-_Weltraum_Piraten_Treffpunkte_Halfway"><a href="/Weltraum/Piraten/Treffpunkte/Halfway">Halfway</a></li>
 <li id="sitemap-_Weltraum_Piraten_Treffpunkte_Piratenbucht"><a href="/Weltraum/Piraten/Treffpunkte/Piratenbucht">Piratenbucht</a></li>
@@ -444,6 +445,7 @@
 <li id="sitemap-_Weltraum_Weltraumphaenomene_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Weltraum/Weltraumphaenomene/">Weltraumphänomene</a>
 <ul><li id="sitemap-_Weltraum_Weltraumphaenomene_BadPlanets"><a href="/Weltraum/Weltraumphaenomene/BadPlanets">BadPlanets</a></li>
 <li id="sitemap-_Weltraum_Weltraumphaenomene_Brabenguertel"><a href="/Weltraum/Weltraumphaenomene/Brabenguertel">Brabengürtel</a></li>
+<li id="sitemap-_Weltraum_Weltraumphaenomene_C3H6O2"><a href="/Weltraum/Weltraumphaenomene/C3H6O2">C3H6O2</a></li>
 <li id="sitemap-_Weltraum_Weltraumphaenomene_Dimensionsriss"><a href="/Weltraum/Weltraumphaenomene/Dimensionsriss">Dimensionsriss</a></li>
 <li id="sitemap-_Weltraum_Weltraumphaenomene_Ghomin_Nebel"><a href="/Weltraum/Weltraumphaenomene/Ghomin-Nebel">Ghomin-Nebel</a></li>
 <li id="sitemap-_Weltraum_Weltraumphaenomene_Grosser_Spiralnebel_von_Trull"><a href="/Weltraum/Weltraumphaenomene/Grosser_Spiralnebel_von_Trull">Großer Spiralnebel von Trull</a></li>
