--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -735,6 +735,8 @@
 <li id="sitemap-_Zufallstabellen_Auswirkungen_der_Unwahrscheinlichkeitszone"><a href="/Zufallstabellen/Auswirkungen_der_Unwahrscheinlichkeitszone">Auswirkungen der Unwahrscheinlichkeitszone</a></li>
 <li id="sitemap-_Zufallstabellen_Auswirkungen_eines_Ionensturms"><a href="/Zufallstabellen/Auswirkungen_eines_Ionensturms">Auswirkungen eines Ionensturms</a></li>
 <li id="sitemap-_Zufallstabellen_Beute"><a href="/Zufallstabellen/Beute">Beutegenerator</a></li>
+<li id="sitemap-_Zufallstabellen_Ereignisse_auf_einem_Planeten"><a href="/Zufallstabellen/Ereignisse_auf_einem_Planeten">Ereignisse auf einem Planeten</a></li>
+<li id="sitemap-_Zufallstabellen_Ereignisse_auf_einer_Raumstation"><a href="/Zufallstabellen/Ereignisse_auf_einer_Raumstation">Ereignisse auf einer Raumstation</a></li>
 <li id="sitemap-_Zufallstabellen_Ereignisse_bei_einem_Raumflug"><a href="/Zufallstabellen/Ereignisse_bei_einem_Raumflug">Ereignisse bei einem Raumflug</a></li>
 <li id="sitemap-_Zufallstabellen_Fehlfunktionen_von_Geraeten"><a href="/Zufallstabellen/Fehlfunktionen_von_Geraeten">Fehlfunktionen von Geräten</a></li>
 <li id="sitemap-_Zufallstabellen_Folgen_von_Neutritium_Negatritium_Strahlung"><a href="/Zufallstabellen/Folgen_von_Neutritium-_Negatritium-Strahlung">Folgen von Neutritium-, Negatritium-Strahlung</a></li>
