Schilde als sitedata

--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -230,6 +230,7 @@
 <li id="sitemap-_Weltraum_Konzerne_Omatic_Enterprise"><a href="/Weltraum/Konzerne/Omatic_Enterprise">Omatic Enterprise</a></li>
 <li id="sitemap-_Weltraum_Konzerne_Puugle_Incorporated"><a href="/Weltraum/Konzerne/Puugle_Incorporated">Puugle Incorporated</a></li>
 <li id="sitemap-_Weltraum_Konzerne_Rabbit_Inc"><a href="/Weltraum/Konzerne/Rabbit_Inc">Rabbit Inc</a></li>
+<li id="sitemap-_Weltraum_Konzerne_Ramsch_Incorporated"><a href="/Weltraum/Konzerne/Ramsch_Incorporated">Ramsch Incorporated</a></li>
 <li id="sitemap-_Weltraum_Konzerne_Raumschiff_und_Co"><a href="/Weltraum/Konzerne/Raumschiff_und_Co">Raumschiff & Co.</a></li>
 <li id="sitemap-_Weltraum_Konzerne_S_I_E_Robotermanufaktur"><a href="/Weltraum/Konzerne/S_I_E_Robotermanufaktur">S.I.E. Robotermanufaktur</a></li>
 <li id="sitemap-_Weltraum_Konzerne_SeeYou"><a href="/Weltraum/Konzerne/SeeYou">SeeYou</a></li>
@@ -737,7 +738,7 @@
 <li id="sitemap-_Zufallstabellen_Beute"><a href="/Zufallstabellen/Beute">Beutegenerator</a></li>
 <li id="sitemap-_Zufallstabellen_Ereignisse_auf_einem_Planeten"><a href="/Zufallstabellen/Ereignisse_auf_einem_Planeten">Ereignisse auf einem Planeten</a></li>
 <li id="sitemap-_Zufallstabellen_Ereignisse_auf_einer_Raumstation"><a href="/Zufallstabellen/Ereignisse_auf_einer_Raumstation">Ereignisse auf einer Raumstation</a></li>
-<li id="sitemap-_Zufallstabellen_Ereignisse_bei_einem_Raumflug"><a href="/Zufallstabellen/Ereignisse_bei_einem_Raumflug">Ereignisse bei einem Raumflug</a></li>
+<li id="sitemap-_Zufallstabellen_Ereignisse_waehrend_eines_Raumflugs"><a href="/Zufallstabellen/Ereignisse_waehrend_eines_Raumflugs">Ereignisse bei einem Raumflug</a></li>
 <li id="sitemap-_Zufallstabellen_Fehlfunktionen_von_Geraeten"><a href="/Zufallstabellen/Fehlfunktionen_von_Geraeten">Fehlfunktionen von Geräten</a></li>
 <li id="sitemap-_Zufallstabellen_Folgen_von_Neutritium_Negatritium_Strahlung"><a href="/Zufallstabellen/Folgen_von_Neutritium-_Negatritium-Strahlung">Folgen von Neutritium-, Negatritium-Strahlung</a></li>
 <li id="sitemap-_Zufallstabellen_KI_Eigenschaften"><a href="/Zufallstabellen/KI-Eigenschaften">KI-Eigenschaften</a></li>
