Der große Fang überarbeitet

--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -482,7 +482,18 @@
 </ul>
 </li>
 <li id="sitemap-_Abenteuer_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/">Abenteuer</a>
-<ul><li id="sitemap-_Abenteuer_Blumenkind_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Blumenkind/">Blumenkind</a>
+<ul><li id="sitemap-_Abenteuer_Der_grosse_Fang_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Der_grosse_Fang/">Der große Fang</a>
+<ul><li id="sitemap-_Abenteuer_Der_grosse_Fang_Einstieg"><a href="/Abenteuer/Der_grosse_Fang/Einstieg">Einstieg</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_SpaceNinjas"><a href="/Abenteuer/Der_grosse_Fang/SpaceNinjas">SpaceNinjas</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Chinese"><a href="/Abenteuer/Der_grosse_Fang/Chinese">Beim alten Chinesen</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Reise"><a href="/Abenteuer/Der_grosse_Fang/Reise">Die Reise nach Proxima Sigma</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Proxima_Sigma"><a href="/Abenteuer/Der_grosse_Fang/Proxima_Sigma">Proxima Sigma</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Proxima_Sigma_II"><a href="/Abenteuer/Der_grosse_Fang/Proxima_Sigma_II">Proxima Sigma II</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Portal"><a href="/Abenteuer/Der_grosse_Fang/Portal">Das Portal</a></li>
+<li id="sitemap-_Abenteuer_Der_grosse_Fang_Danach"><a href="/Abenteuer/Der_grosse_Fang/Danach">Danach</a></li>
+</ul>
+</li>
+<li id="sitemap-_Abenteuer_Blumenkind_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Blumenkind/">Blumenkind</a>
 <ul><li id="sitemap-_Abenteuer_Blumenkind_Blumenkind"><a href="/Abenteuer/Blumenkind/Blumenkind">Die Blumenkind</a></li>
 <li id="sitemap-_Abenteuer_Blumenkind_Doradus"><a href="/Abenteuer/Blumenkind/Doradus">Auf Doradus</a></li>
 <li id="sitemap-_Abenteuer_Blumenkind_Einstieg"><a href="/Abenteuer/Blumenkind/Einstieg">Einstieg</a></li>
@@ -514,17 +525,6 @@
 <li id="sitemap-_Abenteuer_Das_Vermaechtnis_der_goldenen_Schallplatte_In_der_Quantenfluktuation"><a href="/Abenteuer/Das_Vermaechtnis_der_goldenen_Schallplatte/In_der_Quantenfluktuation">In der Quantenfluktuation</a></li>
 <li id="sitemap-_Abenteuer_Das_Vermaechtnis_der_goldenen_Schallplatte_Das_alte_Bandraumschiff"><a href="/Abenteuer/Das_Vermaechtnis_der_goldenen_Schallplatte/Das_alte_Bandraumschiff">Das alte Bandraumschiff</a></li>
 <li id="sitemap-_Abenteuer_Das_Vermaechtnis_der_goldenen_Schallplatte_Ende"><a href="/Abenteuer/Das_Vermaechtnis_der_goldenen_Schallplatte/Ende">Ende</a></li>
-</ul>
-</li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Der_grosse_Fang/">Der große Fang</a>
-<ul><li id="sitemap-_Abenteuer_Der_grosse_Fang_Chinese"><a href="/Abenteuer/Der_grosse_Fang/Chinese">Beim alten Chinesen</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Danach"><a href="/Abenteuer/Der_grosse_Fang/Danach">Danach</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Einstieg"><a href="/Abenteuer/Der_grosse_Fang/Einstieg">Einstieg</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Portal"><a href="/Abenteuer/Der_grosse_Fang/Portal">Das Portal</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Proxima_Sigma"><a href="/Abenteuer/Der_grosse_Fang/Proxima_Sigma">Proxima Sigma</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Proxima_Sigma_II"><a href="/Abenteuer/Der_grosse_Fang/Proxima_Sigma_II">Proxima Sigma II</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_Reise"><a href="/Abenteuer/Der_grosse_Fang/Reise">Die Reise nach Proxima Sigma</a></li>
-<li id="sitemap-_Abenteuer_Der_grosse_Fang_SpaceNinjas"><a href="/Abenteuer/Der_grosse_Fang/SpaceNinjas">SpaceNinjas</a></li>
 </ul>
 </li>
 <li id="sitemap-_Abenteuer_Die_Eisgalaxis_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Die_Eisgalaxis/">Die Eisgalaxis</a>
