Umlaut in Dateinamen ersetzt

--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -716,8 +716,8 @@
 <li id="sitemap-_Abenteuer_Zeitraub_Ende"><a href="/Abenteuer/Zeitraub/Ende">Ende</a></li>
 <li id="sitemap-_Abenteuer_Zeitraub_Marmonen"><a href="/Abenteuer/Zeitraub/Marmonen">Marmonen</a></li>
 <li id="sitemap-_Abenteuer_Zeitraub_Nachforschungen"><a href="/Abenteuer/Zeitraub/Nachforschungen">Nachforschungen</a></li>
+<li id="sitemap-_Abenteuer_Zeitraub_Ueberfall"><a href="/Abenteuer/Zeitraub/Ueberfall">Überfall</a></li>
 <li id="sitemap-_Abenteuer_Zeitraub_Uebersicht"><a href="/Abenteuer/Zeitraub/Uebersicht">Übersicht</a></li>
-<li id="sitemap-_Abenteuer_Zeitraub__berfall"><a href="/Abenteuer/Zeitraub/Überfall">Überfall</a></li>
 </ul>
 </li>
 <li id="sitemap-_Abenteuer_Zeitraub_II_"><a href="#" class="sm-expand">&#xF4FD;</a><a href="/Abenteuer/Zeitraub_II/">Zeitraub II</a>
