FTL-Funk überarbeitet

--- a/assets/html/sitemap.html
+++ b/assets/html/sitemap.html
@@ -17,8 +17,9 @@
 <ul><li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Waffen"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Waffen">Waffen</a></li>
 <li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Schilde"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Schilde">Schilde</a></li>
 <li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Sensoren"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Sensoren">Sensoren</a></li>
+<li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_FTL_Funk"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/FTL-Funk">FTL-Funk</a></li>
 <li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Diverses"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Diverses">Diverses</a></li>
-<li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Style_Zubehoer"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Style-Zubehoer">Style-Zubehör</a></li>
+<li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Style"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Style">Style-Zubehör</a></li>
 <li id="sitemap-_Spielregeln_Die_Piratencrew_Ausruestung_Raumschiffe_Raumschiffmacken"><a href="/Spielregeln/Die_Piratencrew/Ausruestung/Raumschiffe/Raumschiffmacken">Raumschiffmacken</a></li>
 </ul>
 </li>
